Updated gitignore file to exclude autogenerated files Added tokens for code analysis

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,7 @@ fabric.properties
 # Package Files #
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
+# Code
+.vscode
+.gtm
