--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
 
 jacoco {
     toolVersion = '0.8.1'
@@ -29,3 +30,7 @@ jacocoTestReport {
 }
 
 test.finalizedBy jacocoTestReport
+
+coveralls {
+    jacocoReportPath = "${buildDir}/reports/jacoco/report.xml"
+}
