Fixes #8 :bug: :green_heart: Fixing CI Build. As Travis was checking out code based on commit hash & not based on branch, hence even when builds where triggered on master, it was always detached head. Instead of comparing branches, we can compare master branch's commit hash & current HEAD's commit hash, as hashes are always unique

--- a/publish.gradle
+++ b/publish.gradle
@@ -38,6 +38,11 @@ assemble.dependsOn(sourcesJar, javadocJar)
 publish.dependsOn(build)
 
 publishing {
+    repositories {
+        maven {
+            url = uri("$buildDir/maven")
+        }
+    }
     publications {
         production(MavenPublication) {
             from components.java
@@ -100,12 +105,20 @@ bintray {
         signingKey = System.getenv('BINTRAY_SIGN_KEY')
     }
 
-    def buildBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
-    def canPublish = buildBranch == 'master'
+    def currentBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
+    def currentBranchHash = 'git rev-parse HEAD'.execute().text.trim()
+    def masterBranchHash = 'git rev-parse origin/master'.execute().text.trim()
+
+    def canPublish = currentBranchHash == masterBranchHash
+
+    println("currentBranch: $currentBranch\n" +
+            "currentBranchHash: $currentBranchHash\n " +
+            "masterBranchHash: $masterBranchHash")
+    println("dryRun: ${!canPublish}, publish: $canPublish")
 
     publications = ['production']
     configurations = ['archives']
-    override = true
+
     pkg {
         repo = 'maven'
         name = 'NullDefense'
@@ -123,7 +136,7 @@ bintray {
 
         version {
             name = this.version
-            desc = "Initial release"
+            desc = "Releasing v-${project.version}"
             released = new Date()
             vcsTag = this.version
             gpg {
