--- a/publish.gradle
+++ b/publish.gradle
@@ -11,7 +11,7 @@ task javadocGen(type: Javadoc) {
         setMemberLevel JavadocMemberLevel.PUBLIC
         stylesheetFile file("$project.rootDir/assets/stylesheet.css")
     }
-    destinationDir file("$buildDir/javadoc")
+    destinationDir file("$rootDir/docs/javadoc/")
     doFirst {
         classpath += fileTree(dir: "$buildDir/classes", include: "**/*.class")
     }
@@ -92,6 +92,7 @@ bintray {
     def localProps = './local.properties'
     def signingKey
 
+    println("Does local.properties exists: ${file(localProps).exists()}")
     if (file(localProps).exists()) {
         Properties properties = new Properties()
         properties.load(project.rootProject.file(localProps).newDataInputStream())
