--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xms256m -Xmx4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms1024m -Xmx8192m -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.configureondemand=false
 org.gradle.console=auto
