Updated Gradle to latest version
Added autogenerated files
Removed unused heapdump

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xms1024m -Xmx8192m -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.configureondemand=false
 org.gradle.console=auto
-org.gradle.daemon=true
-org.gradle.logging.level=warn
+org.gradle.daemon=false
 org.gradle.warning.mode=none
 org.gradle.parallel=true
+org.gradle.showstacktrace=full
