Updated CSS to dracula theme
Updated site to dracula theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+remote_theme: "dracula/gh-pages"
 title: NullDefense | Gson
 description: Removes invalid objects during Gson parsing which are marked as required, yet null/empty.
 show_downloads: true
