--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,3 +97,40 @@ jobs:
           slug: VenomVendor/NullDefense
           file: ./build/reports/jacoco/report.xml
           fail_ci_if_error: true
+
+  publish:
+    needs: test
+    name: Publish on Java 21
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "temurin"
+
+      - name: Setup Gradle and publish build scans
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          cache-read-only: true
+          build-scan-publish: true
+          build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
+          build-scan-terms-of-use-agree: "yes"
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Set TERM variable for gradle
+        run: echo "TERM=dumb" >> $GITHUB_ENV
+
+      - name: Display environment info
+        run: |
+          ./gradlew -v
+          uname -a
+
+      - name: Publish Snapshot
+        run: ./gradlew publishProductionPublicationToMavenRepository -S
+
+      - name: Remove Gradle cache lock file
+        if: always()
+        run: rm -rvf $HOME/.gradle/caches/modules-2/modules-2.lock
