Sign only on release

--- a/gradle/internal/publish.gradle
+++ b/gradle/internal/publish.gradle
@@ -102,5 +102,7 @@ signing {
     def signingPassword = findProperty("signingPassword") ?: System.getenv("SIGNING_PASSWORD")
     useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
 
+    required { isRelease }
+
     sign publishing.publications.production
 }
