--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
-        java-version: '17'
+          java-version: "11"
 
     - name: Generate and submit dependency graph for the PR
       uses: gradle/actions/dependency-submission@v3
