--- a/.github/workflows/gradle-dependency-submission.yml
+++ b/.github/workflows/gradle-dependency-submission.yml
@@ -4,7 +4,7 @@ name: Dependency Submission
 on:
   push:
     branches:
-    - main
+      - main
 
 permissions:
   contents: write
@@ -13,18 +13,18 @@ jobs:
   dependency-submission:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout sources
-      uses: actions/checkout@v4
+      - name: Checkout sources
+        uses: actions/checkout@v4
 
-    - name: Set up the JDK used to run Gradle
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
+      - name: Set up the JDK used to run Gradle
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
           java-version: "11"
 
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@v3
-      with:
-        build-scan-publish: true
-        build-scan-terms-of-service-url: "https://gradle.com/terms-of-service"
-        build-scan-terms-of-service-agree: "yes"
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v3
+        with:
+          build-scan-publish: true
+          build-scan-terms-of-service-url: "https://gradle.com/terms-of-service"
+          build-scan-terms-of-service-agree: "yes"
