Disable gradle's welcome message

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ org.gradle.daemon=false
 org.gradle.warning.mode=none
 org.gradle.parallel=true
 org.gradle.showstacktrace=full
+org.gradle.welcome=never
