--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,7 +94,7 @@ jobs:
         if: always()
         run: rm -rvf $HOME/.gradle/caches/modules-2/modules-2.lock
 
-      - name: Branch Coverage
+      - name: Branch Codecov Coverage
         uses: codecov/codecov-action@v4.0.1
         with:
           codecov_yml_path: ./codecov.yml
@@ -102,6 +102,12 @@ jobs:
           slug: VenomVendor/NullDefense
           file: build/reports/jacoco/report.xml
           fail_ci_if_error: true
+
+      - name: Branch Codacy Coverage
+        uses: codacy/codacy-coverage-reporter-action@v1.3.0
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: build/reports/jacoco/report.xml
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
