--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: "CodeQL"
+name: "Code Quality"
 
 on:
   push:
@@ -8,9 +8,37 @@ on:
   schedule:
     - cron: "26 10 * * 3"
 
+permissions:
+  contents: read
+
 jobs:
-  analyze:
-    name: Analyze NullDefense
+  codacy-security-scan:
+    name: Codacy Security Scan
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@v4.4.0
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          output: codacy-results.sarif
+          format: sarif
+          gh-code-scanning-compat: true
+          max-allowed-issues: 0
+
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: codacy-results.sarif
+
+  github-security-scan:
+    name: Github Security Scan
     runs-on: "ubuntu-latest"
     timeout-minutes: 360
     permissions:
