--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,6 +40,7 @@ jobs:
   github-security-scan:
     name: Github Security Scan
     runs-on: "ubuntu-latest"
+    if: ${{ false }}
     timeout-minutes: 360
     permissions:
       security-events: write
