--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Release
+name: Publish Artifacts
 
 on:
   push:
@@ -72,7 +72,7 @@ jobs:
           compression-level: 9
 
   publish:
-    name: Publish artifacts
+    name: Ship it!
     runs-on: ubuntu-latest
     environment: publish
     needs: code-coverage
@@ -102,6 +102,12 @@ jobs:
           uname -a
 
       - name: Build using gradle
+        env:
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
         run: |
           echo "Publishing triggered from ${GITHUB_REF_NAME}"
           ./gradlew publish --no-configuration-cache -q -S
